Implementa tema natalino com configurações customizáveis
Adiciona uma nova funcionalidade de tema natalino, permitindo a ativação e personalização de elementos visuais.

Inclui:
- Novas configurações no schema para ativar/desativar o tema, controlar neve, ícones, cores de gradiente e intensidade de efeitos.
- Integração de assets SVG de ícones natalinos para uso em todo o site.
- Snippets modulares para aplicar estilos, animações de neve e exibir ícones no cabeçalho, rodapé e cartões de produto.
- Override de gradientes e cores existentes em seções chave para se alinharem ao novo esquema de cores natalinas.
- Atualiza descrições de campos para a seção VIP CTA para maior clareza.

--- a/locales/pt-BR.json
+++ b/locales/pt-BR.json
@@ -839,5 +839,9 @@
         "submitted_label": "Pedido Registrado"
       }
     }
+  },
+  "christmas_theme": {
+    "enabled": "Tema de Natal Ativado",
+    "disabled": "Tema Padrão"
   }
 }
